5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1646_2724.log
== TEST (2019-04-23 15:24:56) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

maior = max(a, b, c)
menor = min(a, b, c)
meio = (a+b+c) - maior - menor

print(meio)


-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 15:25:09) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

maior = max(a, b, c)
menor = min(a, b, c)
meio = (a+b+c) - maior - menor

print(meio)


-- EXECUTION TIME:
0.213079
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:15:45) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

maior = max(a, b, c)
#menor = min(a, b, c)
#meio = (a+b+c) - maior - menor

#Definicao do meio

meio = a

if (a>b) and (a<c) or (a>c) and (a<b):
	print(meio)
else:
	print(maior)


-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:16:00) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

maior = max(a, b, c)
#menor = min(a, b, c)
#meio = (a+b+c) - maior - menor

#Definicao do meio

meio = a

if (a>b) and (a<c) or (a>c) and (a<b):
	print(meio)
else:
	print(maior)


-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:18:32) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

maior = max(a, b, c)
#menor = min(a, b, c)
#meio = (a+b+c) - maior - menor

#Definicao do meio

meio = a

if (a>b) and (a<c) or (a>c) and (a<b):
else:
	if(a<b) and (b<c) or (b>c) and (a>b):
		meio = b
		print(meio)
else:
	print(maior)


-- ERROR:
File "XXXX", line 15
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:20:27) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

maior = max(a, b, c)
#menor = min(a, b, c)
#meio = (a+b+c) - maior - menor

#Definicao do meio

meio = a

if (a>b) and (a<c) or (a>c) and (a<b):
	print(meio)
	if(a<b) and (b<c) or (b>c) and (a>b):
			meio = b
			print(meio)
else:
	print(maior)


-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:20:59) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

maior = max(a, b, c)
#menor = min(a, b, c)
#meio = (a+b+c) - maior - menor

#Definicao do meio

meio = a

if (a>b) and (a<c) or (a>c) and (a<b):
	print(meio)
		if(a<b) and (b<c) or (b>c) and (a>b):
			meio = b
			print(meio)
else:
	print(maior)


-- ERROR:
File "XXXX", line 16
    if(a<b) and (b<c) or (b>c) and (a>b):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:24:36) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

maior = max(a, b, c)
#menor = min(a, b, c)
#meio = (a+b+c) - maior - menor

#Definicao do meio

meio = a

if (a>b) and (a<c) or (a>c) and (a<b):
	meio = a
else:
	if(a<b) and (b<c) or (b>c) and (a>b):
		meio = b
	else:
		meio = c

print(meio)


-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:24:49) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

maior = max(a, b, c)
#menor = min(a, b, c)
#meio = (a+b+c) - maior - menor

#Definicao do meio

meio = a

if (a>b) and (a<c) or (a>c) and (a<b):
	meio = a
else:
	if(a<b) and (b<c) or (b>c) and (a>b):
		meio = b
	else:
		meio = c

print(meio)


-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:25:06) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

maior = max(a, b, c)
#menor = min(a, b, c)
#meio = (a+b+c) - maior - menor

#Definicao do meio

meio = a

if (a>b) and (a<c) or (a>c) and (a<b):
	meio = a
else:
	if(a<b) and (b<c) or (b>c) and (a>b):
		meio = b
	else:
		meio = c

print(meio)


-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:25:17) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

maior = max(a, b, c)
#menor = min(a, b, c)
#meio = (a+b+c) - maior - menor

#Definicao do meio

meio = a

if (a>b) and (a<c) or (a>c) and (a<b):
	meio = a
else:
	if(a<b) and (b<c) or (b>c) and (a>b):
		meio = b
	else:
		meio = c

print(meio)


-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 21:25:34) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

maior = max(a, b, c)
#menor = min(a, b, c)
#meio = (a+b+c) - maior - menor

#Definicao do meio

meio = a

if (a>b) and (a<c) or (a>c) and (a<b):
	meio = a
else:
	if(a<b) and (b<c) or (b>c) and (a>b):
		meio = b
	else:
		meio = c

print(meio)


-- EXECUTION TIME:
0.18148
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
